# carta-cli

./: .gitignore  .pre-commit-config.yaml  README.md  promptfooconfig.yaml  pyproject.toml
.specimin/plans/001-llm-agent/: implementation.md  plan.md  spec.md
.specimin/plans/001-llm-agent/tasks/: manifest.json  phase_1.md  phase_2.md  phase_3.md
src/carta/: agent.py  cli.py
src/carta.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/carta/app/: __init__.py  app.py  styles.tcss  types.py
src/carta/app/handlers/: __init__.py  base.py  draft.py  feature.py  wizard.py
src/carta/app/screens/: __init__.py  base.py  draft.py  feature.py  wizard.py
src/carta/commands/: cache.py  discover.py  research.py
src/carta/prompts/discover/: draft.md  gather.md  prompt.md
src/carta/prompts/discover/scripts/: save.sh  setup.sh
src/carta/prompts/tests/discovery/: draft.test.yaml  gather.test.yaml
src/carta/prompts/tests/tools/: tools.yaml
src/carta/utils/: cache.py
src/prompts/01.spec/: PROMPT.md
src/prompts/01.spec/scripts/: save-spec.sh  setup.feature.sh
src/prompts/02.plan/: PROMPT.md
src/prompts/02.plan/scripts/: save-plan.sh
src/prompts/03.task/: PROMPT.md
tests/: conftest.py  test_agent.py  test_cli.py
tests/commands/: test_discover.py
