[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carta"
version = "0.0.1"
description = "A CLI tool for LLM-augmented development workflows"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "textual (>=7.3.0,<8.0.0)",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pre-commit>=3.0.0",
    "pytest-watch>=4.2.0",
]

[project.scripts]
carta = "carta.cli:cli"
carta-app = "carta.app.app:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v"

[dependency-groups]
dev = [
    "textual-dev (>=1.8.0,<2.0.0)",
    "textual[syntax] (>=7.3.0,<8.0.0)"
]
